# JimpKol

./: CMakeLists.txt  abds
20153/: CMakeLists.txt  Farm.cpp  Farm.h  main.cpp
2016B/: CMakeLists.txt  Map.cpp  Map.h  main.cpp
2017A/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  main.cpp
2017B/: CMakeLists.txt  SocialGraph.cpp  SocialGraph.h  main.cpp
2017B2/: ArrayList.cpp  ArrayList.h  CMakeLists.txt  main.cpp
2017C/: AdministrativeStructure.cpp  AdministrativeStructure.h  CMakeLists.txt  main.cpp
2017C2/: CMakeLists.txt  GPSTracer.cpp  GPSTracer.h  main.cpp
graph/: CMakeLists.txt  Graph.cpp  Graph.h  main.cpp
loops/: CMakeLists.txt  Testy.cpp  Testy.h  main.cpp
personId/: CMakeLists.txt  PersonId.cpp  PersonId.h  main.cpp
