cmake_minimum_required(VERSION 3.7)
project(test)

set(CMAKE_CXX_STANDARD 14)

macro(add_subdirectory_if_exists DIR)
    #    message("add_subdirectory_if_exists")
    string(TOUPPER "${DIR}" DIR_UPPER)
    #    message("add_subdirectory_if_exists ${DIR_UPPER}")
    if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${DIR}/CMakeLists.txt")
        message("add_subdirectory_if_exists ${DIR_UPPER} EXISTS!")
        set("HAVE_DIR_${DIR_UPPER}" 1)
        add_subdirectory("${DIR}")
    endif ()
endmacro(add_subdirectory_if_exists)

add_subdirectory_if_exists(personId)
add_subdirectory_if_exists(graph)
add_subdirectory_if_exists(2016B)
add_subdirectory_if_exists(2017C)
add_subdirectory_if_exists(2017C2)
add_subdirectory_if_exists(2017B)
add_subdirectory_if_exists(2017A)
add_subdirectory_if_exists(2017B2)
add_subdirectory_if_exists(20153)
add_subdirectory_if_exists(loops)
